# TAMUctf-2020

./: README.md
Crypto/652AHS/: Dockerfile  README.md  flag.txt  password_hash.txt  questions.txt  security_hashes.txt  server.py  solver.py  solver.rs  start.sh
Crypto/EternalGame/: Dockerfile  README.md  flag.txt  key.txt  solver.py  solver.sh  start.sh
Crypto/Sigma/: README.md  encrypt.py  encrypted_flag.txt  flag.txt  solution.py
Crypto/Uncrackable/: README.md  encrypt.py  flag.txt  solve.rs
Misc/RSAPWN/: Dockerfile  README.md  flag.txt  server.py  solver.py  start.sh
Misc/alCapone/: README.md  flag_alCapone.txt
Misc/blind/: Dockerfile  README.md  exec.sh  flag.txt  start.sh
Misc/corrupted_disk/: README.md  build.sh
Misc/geography/: README.md
Misc/instagram/: README.md
Misc/not-so-great-escape/: Dockerfile  README.md  flag.txt  not-so-great-escape.sh
Misc/russiannestingdoll/: README.md  flag.txt
Misc/woofwoof/: README.md
Misc/zippity_doo_dah/: README.md  zipFile.py
NetworkPentest/: password-mismanagers.txt
NetworkPentest/helpful-builder/: Dockerfile  README.md  config.yml  docker-compose.yml  flag.txt  run.sh
NetworkPentest/listen/: config.yml
NetworkPentest/my-first-blog/: Dockerfile  README.md  config.yml  docker-compose.yml  flag.txt  healthcheck.sh  start.sh
NetworkPentest/obituary/: Dockerfile  README.md  flag1.txt  flag2.txt  headless_handler.sh  note_to_self.txt  server.sh
Pwn/bbpwn/: bbpwn.c  (+5 more)
Reversing/just-bc/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  flag.txt  password.txt
Reversing/just-bc/src/: main.rs
(+214 files in other folders)
